# CvxLean

./: .gitignore  CvxLean.lean  CvxLeanPreDCPTest.lean  CvxLeanTest.lean  README.md  build.sh  lake-manifest.json  lakefile.lean  lean-toolchain
.github/workflows/: docs.yml  main.yml
CvxLean/Command/: Common.lean  Equivalence.lean  Reduction.lean  Relaxation.lean  Solve.lean
CvxLean/Demos/: LT2024.lean  README.lean  Viva.lean  WIP.lean
CvxLean/Examples/: All.lean  CovarianceEstimation.lean  FittingSphere.lean  HypersonicShapeDesign.lean  OptimalVehicleSpeed.lean  TrajectoryOptimization.lean  TrajectoryOptimization.py  TrussDesign.lean  VehicleSpeedScheduling.lean  covariance_estimation.py  fitting_sphere.py  hypersonic_shape_design.py  hypersonicshapedesign.py  optimal_vehicle_speed.py  trajectory_optimization.py  trajectoryoptimization.py  truss_design.py  trussdesign.py  vehicle_speed_scheduling.py
CvxLean/Lib/: Cones.lean  (+10 more)
arb/: lakefile.lean
egg-pre-dcp/: Cargo.toml
ffi/: lake-manifest.json  lakefile.lean
lean_packages/: manifest.json
rewriter/: .gitignore  Cargo.toml  test.dot
rewriter/src/: cost.rs  curvature.rs  domain.rs  explain_utils.rs  extract.rs  lib.rs  main.rs  optimization.rs  rules.rs  test.rs  tests.rs  tests_domain.rs  visualization.rs
rewriter/tests/: test_almost_dgp.rs  test_cost_function.rs  test_domain.rs  test_dqcp.rs  test_gp.rs  test_main_example.rs  test_misc.rs  test_quiz.rs  test_rules.rs  test_stanford.rs  tests.rs
scripts/: check_style.sh
workaround/: Main.lean  Workaround.lean  lake-manifest.json  lakefile.lean
(+372 files in other folders)
