[package]
name = "egg-convexify"
version = "0.1.0"
edition = "2018"

[dependencies]
egg = { version = "0.9.4", features=["serde-1"] }
symbolic_expressions = "5.0.3"
log = "0.4.17"
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
indexmap = "1.8.1"
instant = "0.1.12"
fxhash = "0.2.1"
hashbrown = "0.12.1"
thiserror = "1.0.31"
symbol_table = { version = "0.2.0", features = ["global"] }
env_logger = { version = "0.9.0", default-features = false }
ordered-float = "3.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.test]
debug = true
opt-level = 1

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
